volexc/tests/ui/parse_unexpected_token.out
Error: found "}" but expected one of ":", "?"
   ╭─[parse_unexpected_token.vol:4:1]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: ':', '?'
───╯